--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,16 @@
   </dependencies>
   <build>
     <finalName>leituras-resenhas</finalName>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>8</source>
+                  <target>8</target>
+              </configuration>
+          </plugin>
+      </plugins>
   </build>
 </project>
 
